--- a/index.html
+++ b/index.html
@@ -6,151 +6,115 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <header>
-    <navbar >
-    <ul class="sideBar">
-        <li onclick="closeSideBar()" class="nav-logo "><img src="https://res.cloudinary.com/dwtn2kajc/image/upload/v1763536590/Screenshot_2025-11-19_124452-removebg-preview_gv8xut.png" alt=""> <svg class="closeSideBar" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></li>
-        <li>Home</li>
-        <li>Services</li>
-        <li>Gallery</li>
-        <li>Blog</li>
-        <li>Testimonial</li>
-        <li>FAQs</li>
-        <li>Career</li>
-        <li class="Enquiry">Enquiry</li>
-    </ul>
+
+<header>
+
+    <!-- SIDEBAR -->
+    <navbar>
+       <ul class="sideBar">
+            <li>Home</li>
+            <li>Services</li>
+            <li>Gallery</li>
+            <li>Blog</li>
+            <li>Testimonial</li>
+            <li>FAQs</li>
+            <li>Career</li>
+
+            <!-- LOGIN & REGISTER -->
+            <li class="button login-btn">Login</li>
+            <li class="button register-btn">Register</li>
+        </ul>
     </navbar>
+
+    <!-- TOP NAVBAR -->
     <navbar class="Nav-one">
-    <ul>
-        <li class="nav-logo"><img src="https://res.cloudinary.com/dwtn2kajc/image/upload/v1763536590/Screenshot_2025-11-19_124452-removebg-preview_gv8xut.png" alt=""> </li>
-        <li>Home</li>
-        <li>Services</li>
-        <li>Gallery</li>
-        <li>Blog</li>
-        <li>Testimonial</li>
-        <li>FAQs</li>
-        <li>Career</li>
-        <li class="Enquiry">Enquiry</li>
-        <li onclick="showSideBar()" class="hamBurger"><svg xmlns="http://www.w3.org/2000/svg" height="38px" viewBox="0 -960 960 960" width="30px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li>
-    </ul>
+        <ul>
+            <li class="nav-logo">
+                <img src="https://res.cloudinary.com/dwtn2kajc/image/upload/v1763536590/Screenshot_2025-11-19_124452-removebg-preview_gv8xut.png" alt="">
+            </li>
+
+            <li>Home</li>
+            <li>Services</li>
+            <li>Gallery</li>
+            <li>Blog</li>
+            <li>Testimonial</li>
+            <li>FAQs</li>
+            <li>Career</li>
+
+            <!-- LOGIN & REGISTER DESKTOP -->
+            <li class="button login-btn">Login</li>
+            <li class="button register-btn">Register</li>
+
+            <!-- HAMBURGER -->
+            <li onclick="toggleMenu()" class="hamBurger">
+                <svg id="menuIcon" xmlns="http://www.w3.org/2000/svg"
+                    height="38px" viewBox="0 -960 960 960" width="30px" fill="#000">
+                    <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+                </svg>
+            </li>
+        </ul>
     </navbar>
-<script>
-function showSideBar(){
-    const sideBar = document.querySelector(".sideBar")
-    sideBar.style.display = "flex";
-}
-function closeSideBar(){
-    const sideBar = document.querySelector(".sideBar")
-    sideBar.style.display = "none";
-}
-</script>
+
 </header>
 
+<!-- ================= JS ================= -->
+<script>
+function toggleMenu() {
+    const sideBar = document.querySelector(".sideBar");
+    const menuIcon = document.getElementById("menuIcon");
+
+    if (sideBar.classList.contains("show")) {
+        sideBar.classList.remove("show");
+
+        menuIcon.innerHTML = `
+            <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+        `;
+    } else {
+        sideBar.classList.add("show");
+
+        menuIcon.innerHTML = `
+            <path d="m256-200-56-56 224-224-224-224 56-56 
+            224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
+        `;
+    }
+}
+</script>
+
+<!-- ================= MAIN CONTENT ================= -->
 
 <main>
     <h1>Shoe Collection</h1>
+
     <div class="product-List">
         <div class="product-card">
             <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
             <h2>JQR</h2>
             <p>₹999</p>
         </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/717cuQbVMKL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-       <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/717cuQbVMKL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div><div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/81R6YbNKOzL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
 
+        <div class="product-card">
+            <img src="https://m.media-amazon.com/images/I/717cuQbVMKL._AC_UL480_FMwebp_QL65_.jpg" alt="">
+            <h2>JQR</h2>
+            <p>₹999</p>
+        </div>
     </div>
 
-     <h1>Laptop Bags Collection</h1>
+    <h1>Laptop Bags Collection</h1>
+
     <div class="product-List">
         <div class="product-card">
             <img src="https://m.media-amazon.com/images/I/818G1ErGG+L._AC_UY327_FMwebp_QL65_.jpg" alt="">
             <h2>JQR</h2>
             <p>₹999</p>
         </div>
+
         <div class="product-card">
             <img src="https://m.media-amazon.com/images/I/71DpWUuEbyL._AC_UF480,480_SR480,480_.jpg" alt="">
             <h2>JQR</h2>
             <p>₹999</p>
         </div>
-       <div class="product-card">
-            <img src="https://images-eu.ssl-images-amazon.com/images/I/81sEweWHHLL._AC_UL165_SR165,165_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-       <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/71jdXCKYn4L._AC_SR360,240_CB1169409_QL70_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/71jdXCKYn4L._AC_SR360,240_CB1169409_QL70_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/71jdXCKYn4L._AC_SR360,240_CB1169409_QL70_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/71jdXCKYn4L._AC_SR360,240_CB1169409_QL70_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/719L9w2d-6L._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-        <div class="product-card">
-            <img src="https://m.media-amazon.com/images/I/51h-NcBDRaL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-            <h2>JQR</h2>
-            <p>₹999</p>
-        </div>
-
     </div>
 </main>
 
