added review section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=Montserrat:wght@300;400;500;600;700&family=Nunito:wght@300;400;600;700&family=Rubik:wght@300;400;500;600&family=Lato:wght@300;400;700&family=Work+Sans:wght@300;400;500;600&family=DM+Sans:wght@300;400;500;600&family=Open+Sans:wght@300;400;600&family=Raleway:wght@300;400;500;600&display=swap"
     rel="stylesheet">
@@ -267,6 +268,323 @@
  
 </div>
   </div>
+
+
+<div class="google-section">
+
+  <div class="google-text">
+    <h2>Recent Google Reviews</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, sapien cursus sollicitudin eget fringilla.</p>
+  </div>
+
+  <div class="google-row">
+    
+    <div class="google-card">
+      <div class="google-header">
+        <img src="images/google.svg" alt="">
+        <h4>Google Rating</h4>
+      </div>
+
+      <div class="google-rating">
+        <h4>4.9</h4>
+        <img src="images/Group 27.svg" alt="">
+        <p>- 58 Ratings</p>
+      </div>
+    </div>
+
+    <button class="google-btn">Write a review</button>
+
+  </div>
+
+
+  <div class="reviews-wrapper">
+ 
+<div class="carousel">
+
+  <div class="row">
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card"><  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+  </div>
+
+  <div class="row">
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+    <div class="card">  <div class="review-card">
+          <div class="review-top">
+            <div class="review-user">
+              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <div>
+                <h4>Harry Ellis</h4>
+                <span>@harryell • 10 Min ago</span>
+              </div>
+            </div>
+            <img src="images/google.svg" class="google-icon" alt="Google" />
+          </div>
+          <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
+          <p class="review-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+          </p>
+        </div>
+      </div>
+  </div>
+
+</div>
+
+  
+</div>
+
+</div>
 
   <script>
     window.onload = function () {
