--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <div class="card">  <div class="review-card">
           <div class="review-top">
             <div class="review-user">
-              <img src="images/.svg" class="user-img" alt="Harry Ellis" />
+              <img src="images/Ellipse 26.svg" class="user-img" alt="Harry Ellis" />
               <div>
                 <h4>Harry Ellis</h4>
                 <span>@harryell • 10 Min ago</span>
@@ -315,7 +315,7 @@
           </div>
           <img src="images/Group 27.svg" class="stars" alt="5 Stars" />
           <p class="review-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non tellus nibh feugiat aliquet neque scelerisque.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis mauris blandit sollicitudin amet. Tellus dignissim amet, dictum quis pulvinar. Hendrerit imperdiet et cursus tempor, sed amet. Facilisis phasellus eu nulla felis in mattis.
           </p>
         </div>
       </div>
@@ -584,6 +584,15 @@
   
 </div>
 
+</div>
+
+<div class="people-section">
+
+  <div class="people-text">
+    <h2>What People Says About us</h2>
+    <p>Aliff is a global education consultant based in mumbai that specialises in helps students choose the Right Course, Right College, Right Country, anywhere in the world.</p>
+  </div>
+  
 </div>
 
   <script>
