Add sign-up section with styles and animations

--- a/index.html
+++ b/index.html
@@ -747,6 +747,11 @@
   </details>
 
 </section>
+<section class="signUp-section">
+  <h2>Start Your Study Abroad Journey Now!</h2>
+<button>Sign Up</button>
+<img src="images/Group 3.svg" alt="">
+</section>
 <footer class="study-abroad-footer">
     <div class="footer-container">
         
