--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         </div>
       </div>
 
-      <div class="universities">
+      <div class="universities prefer">
 
         <img src="images/Illustration 02.svg" alt="">
         <div>
