--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </main>
 
 <section class="mileStone">
-  <h2>Our Milestones</h2>
+  <h2>Our <span>MileStone</span></h2>
 
   <div class="milestone-grp">
 
@@ -208,7 +208,7 @@
 
   <section class="why">
     <div class="why-header">
-      <h2>Why Student. Abroad Journey.</h2>
+      <h2>Why Student. <span>Abroad Journey</span></h2>
 
       <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, sapien cursus sollicitudin
         eget fringilla.</p>
@@ -267,7 +267,7 @@
 
         <img src="images/Illustration 02.svg" alt="">
         <div>
-          <h1>Why Should. Prefer Aliff.</h1>
+          <h1>Why Should. <span>Prefer Aliff.</span> </h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Euismod etiam ligula facilisis tortor. Tincidunt
             habitant venenatis adipiscing vestibulum sapien, neque. Vel habitant placerat leo nibh. Elit semper neque,
             nunc aenean. Diam tincidunt lorem malesuada odio nisi, pellentesque non feugiat.</p>
@@ -293,7 +293,7 @@
   <section class="google-section">
 
     <div class="google-text">
-      <h2>Recent Google Reviews</h2>
+      <h2>Recent <span> Google</span> Reviews</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, sapien cursus sollicitudin eget fringilla.</p>
     </div>
 
@@ -642,7 +642,7 @@
   <section class="people-section">
 
     <div class="people-text">
-      <h2>What People Says About us</h2>
+      <h2>What People <span>Says</span>  About us</h2>
       <p>Aliff is a global education consultant based in mumbai that specialises in helps students choose the Right
         Course, Right College, Right Country, anywhere in the world.</p>
     </div>
@@ -737,7 +737,7 @@
   <section class="faq-section">
 
     <div class="faq-header">
-      <h2>Have a questions?</h2>
+      <h2>Have a <span>questions?</span></h2>
       <p>Everything you need to know about the career and help.</p>
     </div>
 
@@ -809,7 +809,7 @@
   </section>
 
   <section class="signUp-section">
-    <h2>Start Your Study Abroad Journey Now!</h2>
+    <h2>Start Your Study Abroad <span>Journey Now!</span></h2>
     <button type="submit" class="submit-btn">Submit</button>
     <img src="images/Group 3.svg" alt="">
   </section>
