--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
 
     <div class="counselling">
-      <span>Book my free counselling <button class="counselling-button">Click Here</button></span>
+      <span>Book my free counselling <button class="counselling-button"  onclick="window.location.href='https://agency-website-try.vercel.app/'" >Click Here</button></span>
       <span class="closeCounselling" onclick="closeCounselling()">✕</span>
     </div>
 
